--- a/podCapsule/Scenes/Search/SearchMain/View/SuggestedPodcastsTableViewCell.xib
+++ b/podCapsule/Scenes/Search/SearchMain/View/SuggestedPodcastsTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="390" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1661872754162" translatesAutoresizingMaskIntoConstraints="NO" id="9ah-MC-Oq5">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EP" translatesAutoresizingMaskIntoConstraints="NO" id="9ah-MC-Oq5">
                         <rect key="frame" x="10" y="5" width="90" height="90"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="90" id="Jxh-XD-NHp"/>
@@ -64,6 +64,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="1661872754162" width="1321" height="1450"/>
+        <image name="EP" width="500" height="500"/>
     </resources>
 </document>
